feat: 更新产品列表为chatgpt plus相关服务

--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
                     <img src="https://images.unsplash.com/photo-1675271591211-126ad94e495d?auto=format&fit=crop&q=80&w=400" alt="AI绘画软件">
                 </div>
                 <div class="product-info">
-                    <h3>西牧AI绘画版</h3>
-                    <p>一键生成超写实艺术大作</p>
-                    <div class="price">¥199 / 年</div>
-                    <button class="btn-buy" onclick="handleBuy('绘画版')">立即开通</button>
+                    <h3>chatgpt plus成品号</h3>
+                    <p>最强ai对话模型，能用codex</p>
+                    <div class="price">¥20/月</div>
+                    <button class="btn-buy" onclick="handleBuy('chatgpt plus成品号')">立即开通</button>
                 </div>
             </div>
 
@@ -235,10 +235,10 @@
                     <img src="https://images.unsplash.com/photo-1673187115862-d81b239e731c?auto=format&fit=crop&q=80&w=400" alt="AI写作软件">
                 </div>
                 <div class="product-info">
-                    <h3>西牧AI灵感写作</h3>
-                    <p>文案策划与长文创作神器</p>
-                    <div class="price">¥149 / 年</div>
-                    <button class="btn-buy" onclick="handleBuy('写作版')">立即开通</button>
+                    <h3>chatgpt plus充值自己号</h3>
+                    <p>最强ai对话模型，能用codex</p>
+                    <div class="price">¥50/月</div>
+                    <button class="btn-buy" onclick="handleBuy('chatgpt plus充值自己号')">立即开通</button>
                 </div>
             </div>
 
