docs(index.html): 更新产品名称和价格信息为gemini3 pro学生优惠

--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                     <img src="https://images.unsplash.com/photo-1664575196412-ed801e8333a1?auto=format&fit=crop&q=80&w=400" alt="AI助手软件">
                 </div>
                 <div class="product-info">
-                    <h3>西牧AI商务助手</h3>
-                    <p>全能型效率办公专家系统</p>
-                    <div class="price">¥299 / 年</div>
-                    <button class="btn-buy" onclick="handleBuy('商务版')">立即开通</button>
+                    <h3>gemini3 pro一年学生优惠</h3>
+                    <p>全能型效率学习办公</p>
+                    <div class="price">¥45/年</div>
+                    <button class="btn-buy" onclick="handleBuy('gemini3 pro一年学生优惠')">立即开通</button>
                 </div>
             </div>
         </div>
