fix(index.html): 替换商品卡片图片为本地资源
将商品卡片中的远程图片替换为本地存储的图片资源，避免依赖外部服务

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <!-- 商品卡片 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1675271591211-126ad94e495d?auto=format&fit=crop&q=80&w=400" alt="AI绘画软件">
+                    <img src="./image/d392ec78-6660-4fcf-9bc9-aead048ec6fb.png" alt="AI绘画软件">
                 </div>
                 <div class="product-info">
                     <h3>chatgpt plus成品号</h3>
@@ -232,7 +232,7 @@
             <!-- 商品卡片 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1673187115862-d81b239e731c?auto=format&fit=crop&q=80&w=400" alt="AI写作软件">
+                    <img src="./image/d392ec78-6660-4fcf-9bc9-aead048ec6fb.png" alt="AI写作软件">
                 </div>
                 <div class="product-info">
                     <h3>chatgpt plus充值自己号</h3>
@@ -245,7 +245,7 @@
             <!-- 商品卡片 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1664575196412-ed801e8333a1?auto=format&fit=crop&q=80&w=400" alt="AI助手软件">
+                    <img src="./image/610bd2f4-ddb3-4800-8ab0-f8825c6511b1.png" alt="AI助手软件">
                 </div>
                 <div class="product-info">
                     <h3>gemini3 pro一年学生优惠</h3>
