--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="product-info">
                     <h3>chatgpt plus成品号</h3>
                     <p>最强ai对话模型，能用codex</p>
-                    <div class="price">¥20/月</div>
+                    <div class="price">20元/月</div>
                     <button class="btn-buy" onclick="handleBuy('chatgpt plus成品号')">立即开通</button>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                 <div class="product-info">
                     <h3>chatgpt plus充值自己号</h3>
                     <p>最强ai对话模型，能用codex</p>
-                    <div class="price">¥50/月</div>
+                    <div class="price">50元/月</div>
                     <button class="btn-buy" onclick="handleBuy('chatgpt plus充值自己号')">立即开通</button>
                 </div>
             </div>
@@ -250,7 +250,7 @@
                 <div class="product-info">
                     <h3>gemini3 pro一年学生优惠</h3>
                     <p>全能型效率学习办公</p>
-                    <div class="price">¥66/年</div>
+                    <div class="price">66元/年</div>
                     <button class="btn-buy" onclick="handleBuy('gemini3 pro一年学生优惠')">立即开通</button>
                 </div>
             </div>
